--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ fastapi==0.75.0
 h11==0.13.0
 httptools==0.3.0
 idna==3.3
+Jinja2==3.0.3
+MarkupSafe==2.1.0
 powerline-status==2.7
 pydantic==1.9.0
 python-dotenv==0.19.2
