--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,1 +1,5 @@
-site_name: My Docs
+site_name: Land Property Platform
+nav:
+  - Home: index.md
+  - Property Information: property_info.md
+theme: readthedocs
