--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Land Property Platform
+site_name: Land and property platform
 nav:
   - Home: index.md
   - Property Information: property_info.md
