--- a/.github/workflows/publish-app.yml
+++ b/.github/workflows/publish-app.yml
@@ -4,6 +4,7 @@ name: Build and deploy Python app to Azure Web App
 env:
   AZURE_WEBAPP_NAME: landplatform-fastapi-dev   # set this to your application's name
   PYTHON_VERSION: '3.8'               # set this to the Python version to use
+  AZURE_WEBAPP_PACKAGE_PATH: '.' # set this to the path to your web app
 
 on:
   push:
@@ -36,7 +37,9 @@ jobs:
             ${{ runner.os }}-pip-
 
       - name: Install dependencies
-        run: make init
+        run: |
+           python -m pip install --upgrade pip
+           pip install -r requirements.txt
 
       # Optional: Add a step to run tests here (PyTest, Django test suites, etc.)
 
@@ -63,7 +66,8 @@ jobs:
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
-        uses: azure/webapps-deploy@0b651ed7546ecfc75024011f76944cb9b381ef1e
+        uses: azure/webapps-deploy@v2
         with:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
