json attribute names

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ httptools==0.3.0
 idna==3.3
 Jinja2==3.0.3
 MarkupSafe==2.1.0
-psycopg2==2.8.4
+psycopg2-binary==2.9.3
 pydantic==1.9.0
 python-dotenv==0.19.2
 PyYAML==6.0
@@ -17,7 +17,6 @@ six==1.16.0
 sniffio==1.2.0
 starlette==0.17.1
 typing_extensions==4.1.1
-uvicorn==0.17.5
-uvloop==0.16.0
+uvicorn==0.18.2
 watchgod==0.7
 websockets==10.2
