--- a/.github/workflows/publish-app.yml
+++ b/.github/workflows/publish-app.yml
@@ -40,6 +40,7 @@ jobs:
         run: |
            python -m pip install --upgrade pip
            pip install -r requirements.txt
+           npm install
 
       # Optional: Add a step to run tests here (PyTest, Django test suites, etc.)
       
